--- a/.eslintrc
+++ b/.eslintrc
@@ -13,12 +13,13 @@
     // Configuration for TypeScript files
     {
       "files": ["**/*.ts", "**/*.tsx"],
-      "plugins": ["@typescript-eslint", "unused-imports"],
+      "plugins": ["@typescript-eslint", "unused-imports", "tailwindcss"],
       "extends": [
         "airbnb-typescript",
         "next",
         "next/core-web-vitals",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:tailwindcss/recommended"
       ],
       "parserOptions": {
         "project": "./tsconfig.json"
@@ -30,9 +31,12 @@
             "singleQuote": true
           }
         ],
-        "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
+        "react/prop-types": "off",
+        "react/jsx-filename-extension": "off",
+        "react/no-unused-prop-types": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/require-default-props": "off",
         "jsx-a11y/anchor-is-valid": "off", // Next.js use his own internal link system
-        "react/require-default-props": "off", // Allow non-defined react props as undefined
         "@next/next/no-img-element": "off", // We currently not using next/image because it isn't supported with SSG mode,
         "react/jsx-props-no-spreading": "off",
         "import/order": [
