--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^1.14.3",
     "eslint-plugin-unused-imports": "^1.1.3",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
