--- a/.eslintrc
+++ b/.eslintrc
@@ -13,24 +13,19 @@
     // Configuration for TypeScript files
     {
       "files": ["**/*.ts", "**/*.tsx"],
-      "plugins": ["@typescript-eslint", "unused-imports", "tailwindcss"],
+      "plugins": ["@typescript-eslint", "unused-imports", "tailwindcss", "prettier"],
       "extends": [
         "airbnb-typescript",
         "next",
         "next/core-web-vitals",
-        "plugin:prettier/recommended",
+        "prettier",
         "plugin:tailwindcss/recommended"
       ],
       "parserOptions": {
         "project": "./tsconfig.json"
       },
       "rules": {
-        "prettier/prettier": [
-          "error",
-          {
-            "singleQuote": true
-          }
-        ],
+        "prettier/prettier": "error",
         "react/prop-types": "off",
         "react/jsx-filename-extension": "off",
         "react/no-unused-prop-types": "off",
