--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
-  // Configuration for JavaScript files
-  "extends": ["airbnb-base", "plugin:prettier/recommended"],
+  "extends": [
+    "airbnb-base",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
     "prettier/prettier": [
       "error",
@@ -10,10 +12,17 @@
     ]
   },
   "overrides": [
-    // Configuration for TypeScript files
     {
-      "files": ["**/*.ts", "**/*.tsx"],
-      "plugins": ["@typescript-eslint", "unused-imports", "tailwindcss", "prettier"],
+      "files": [
+        "**/*.ts",
+        "**/*.tsx"
+      ],
+      "plugins": [
+        "@typescript-eslint",
+        "unused-imports",
+        "tailwindcss",
+        "prettier"
+      ],
       "extends": [
         "airbnb-typescript",
         "next",
@@ -31,13 +40,17 @@
         "react/no-unused-prop-types": "off",
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off",
-        "jsx-a11y/anchor-is-valid": "off", // Next.js use his own internal link system
-        "@next/next/no-img-element": "off", // We currently not using next/image because it isn't supported with SSG mode,
+        "jsx-a11y/anchor-is-valid": "off",
+        "@next/next/no-img-element": "off",
         "react/jsx-props-no-spreading": "off",
         "import/order": [
           "error",
           {
-            "groups": ["builtin", "external", "internal"],
+            "groups": [
+              "builtin",
+              "external",
+              "internal"
+            ],
             "pathGroups": [
               {
                 "pattern": "react",
@@ -45,7 +58,9 @@
                 "position": "before"
               }
             ],
-            "pathGroupsExcludedImportTypes": ["react"],
+            "pathGroupsExcludedImportTypes": [
+              "react"
+            ],
             "newlines-between": "always",
             "alphabetize": {
               "order": "asc",
@@ -58,7 +73,9 @@
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
           "error",
-          { "argsIgnorePattern": "^_" }
+          {
+            "argsIgnorePattern": "^_"
+          }
         ]
       }
     }
