--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.9",
-    "typescript": "^4.3.5",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript": "^4.3.5"
   },
   "config": {
     "commitizen": {
