--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,5 @@
 {
   "extends": [
-    "airbnb-base",
     "plugin:prettier/recommended"
   ],
   "rules": {
@@ -24,7 +23,6 @@
         "prettier"
       ],
       "extends": [
-        "airbnb-typescript",
         "next",
         "next/core-web-vitals",
         "prettier",
@@ -34,6 +32,7 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "tailwindcss/no-custom-classname": "off",
         "prettier/prettier": "error",
         "react/prop-types": "off",
         "react/jsx-filename-extension": "off",
